Add documentation for additions and size
