# routes/sizes.js
@@ -15,9 +15,7 @@ router.get('/', async(req,res)=>{
     return res.status(200).send(result)
 })
 
-//NO AUTH
-//router.post('/', userSchema.postProduct, auth.validateInput,
-router.post('/', validationSchema.postSize, auth.validateInput, async(req,res)=>{
+router.post('/', validationSchema.postSize, auth.validateInput, auth.verifyUserAdminAsync, async(req,res)=>{
     await sizeRepo.postSize(req.body)
     return res.status(200).send('Created')
 })
